@@ -4,6 +4,7 @@ AV2 Changelog :: version a3.1
 
 * By default, mining takes only 4 instead of 8 chi
 * Commands no longer case-sensitive (capital/lowercase doesn't matter)
+* Don't have to look directly at water to make water arc
 
 > Fix elytra flight allowing infinite height
 > Fix problem with radial menu in 3rd person
